@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="Animation.cs" />
     <Compile Include="CollisionManager.cs" />
+    <Compile Include="Debug.cs" />
     <Compile Include="GameInterface.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="PhysicsManager.cs" />
