@@ -62,6 +62,13 @@ Current Assignment: GameDesign
 //////////////////////////////////////////////////////////////////////////
 
 
+XNAGameEngine | Michael Villar | 3/11/2014								
+ -(New) Debug.cs - Game1.cs		
+ -Time: 12pm - 1:08am = 1:08											
+ -Notes: Debugger is good to go. Used exact same way as previous games.
+ Open Debug.spritefont (Content) to change font attributes. This will
+ make the default font.	
+
 XNAGameEngine | Hypo Klarich | 3/11/2014								
  -CollisionManager.cs -Game1.cs -GameInterface.cs -GameObject.cs		
  -Time: 11am - 1:38pm = 2:38											
